# classify

./: .gitignore  Makefile.am  README  autogen.sh  classify-auto.desktop  classify.conf  classify.desktop  classify.desktop.in  configure.ac  run-classify.sh
debian/: .gitignore  changelog  classify.dirs  classify.install  classify.postinst  classify.xml  control  control.noicon  copyright  libclassify0.docs  libclassify0.install  postinst  rules
icons/: Makefile.inc
src/: default-user-interface.c  default-user-interface.h  default-window.c  default-window.h  hildon-user-interface.c  hildon-window.c  hildon-window.h  main-window.c  main-window.h  main.c  marshal.list  parser.c  parser.h  preferences.c  preferences.h  task-list-io-text.c  task-list-io-text.h  task-list-io-xml.c  task-list-io-xml.h  task-list-io.c  task-list-io.h  task-list.c  task-list.h  task-widget.c  task-widget.h  task.c  task.h  user-interface-factory.c  user-interface-factory.h  user-interface.c  user-interface.h  uuid.c  uuid.h  window.c  window.h
test/: Makefile.inc  test-uuid.c
tests/: debugify.c  modtest.c
